    support mnemonics and prompters may send labels with it. Patch
    cherry-picked from upstream Git.
  * Add Provides: notification-daemon. GNOME Shell provides an implementation
    of org.freedesktop.Notifications which other applications make use of.
    This dependency is typically expressed by depending on the
    notification-daemon package.
  * Update Homepage: URL.

 -- Michael Biebl <biebl@debian.org>  Mon, 15 Jun 2015 21:03:07 +0200

gnome-shell (3.16.2-3) unstable; urgency=medium

  * Upload to unstable.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 14 Jun 2015 13:44:20 +0200

gnome-shell (3.16.2-2) experimental; urgency=medium

  * debian/control.in: Bump gnome-settings-daemon to 3.16.0, this seems
    necessary for the media keys to work.

 -- Laurent Bigonville <bigon@debian.org>  Thu, 11 Jun 2015 15:00:29 +0200

gnome-shell (3.16.2-1) experimental; urgency=medium

  * New upstream release.
  * debian/control.in:
    + Update (build-)dependencies.
    + Let gnome-shell depend on gir1.2-gweather-3.0.
  * debian/patches/51-Delay-caribou-daemon-invocation.patch:
    + Dropped, included upstream.
  * debian/patches/10_background_race.patch:
    + Disabled for now, doesn't apply.
  * Upload to experimental.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 31 May 2015 00:06:10 +0200

gnome-shell (3.14.4-1) unstable; urgency=medium

  * New upstream translation and bugfix release.
    + Includes workaround for #768896 which is very annoying for users 
      of the proprietary nvidia driver.
  * 01_network_list.patch, 02_auth_prompt.patch, 
    50-compute-weeknumber-with-gdatetime.patch: dropped, merged 
    upstream.
  * Bump (build-)dependencies on mutter as usual.

 -- Josselin Mouette <joss@debian.org>  Thu, 26 Mar 2015 21:44:04 +0100

gnome-shell (3.14.2-3) unstable; urgency=medium

  * Add missing dependency on mutter. Closes: #764715.
  * 10_background_race.patch: fix a race condition when loading two 