@@ -100,10 +100,7 @@ Recommends: gkbd-capplet,
             gnome-user-guide,
             unzip,
             gdm3 (>= 3.10.0.1-3~)
-Breaks: fglrx-driver (<< 1:11-10),
-        gdm3 (<< 3.10.0.1-3~),
-        gnome-control-center (<< 1:3.0),
-        gnome-session (<< 3.0),
+Breaks: gdm3 (<< 3.10.0.1-3~),
         gnome-tweak-tool (<< 3.5)
 Conflicts: gnome-screensaver (<< 3.6)
 Provides: notification-daemon
@@ -118,9 +115,6 @@ Description: graphical shell for the GNOME desktop
 Package: gnome-shell-common
 Architecture: all
 Depends: ${misc:Depends}
-Replaces: gnome-shell (<< 3.2.1-6)
-Breaks: gnome-shell (<< 3.2.1-6),
-        gnome-tweak-tool (<< 3.3)
 Description: common files for the GNOME graphical shell
  This package contains translations and data files for the GNOME shell.
 
