@@ -10,6 +10,7 @@ gnome-shell (3.16.2-4) UNRELEASED; urgency=medium
     This dependency is typically expressed by depending on the
     notification-daemon package.
   * Update Homepage: URL.
+  * Drop obsolete Breaks/Replaces from pre-wheezy.
 
  -- Michael Biebl <biebl@debian.org>  Mon, 15 Jun 2015 21:03:07 +0200
 
